--- a/tracker/templates/main.html
+++ b/tracker/templates/main.html
@@ -22,7 +22,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
-          {% if user.is_authenticated %}
+          {% if request.user.is_authenticated %}
          <li class="nav-item">
         <a class="nav-link" href="{% url 'entries' %}">My Entries</a>
       </li>
@@ -32,7 +32,7 @@
 
         {% endif %}
 
-        {% if user.is_staff %}
+        {% if request.user.is_staff %}
       <li class="nav-item">
         <a class="nav-link" href="{% url 'users-list' %}">Users</a>
       </li>
@@ -44,8 +44,8 @@
         <li class="navbar-nav mr-auto">
 
 
-        {% if user.is_authenticated %}
-            <li class="nav-item"> <a class="nav-link" href="{% url 'logout' %}">{{user.username}} - Logout</a> </li>
+        {% if request.user.is_authenticated %}
+            <li class="nav-item"> <a class="nav-link" href="{% url 'logout' %}">{{request.user.username}} - Logout</a> </li>
         {% else %}
             <li class="nav-item"> <a class="nav-link" href="{% url 'login' %}">Login</a> </li>
       <li class="nav-item"> <a class="nav-link" href="{% url 'signup' %}">Signup</a> </li>
