--- a/tracker/templates/tracker/entry_list.html
+++ b/tracker/templates/tracker/entry_list.html
@@ -38,6 +38,7 @@ My Entries
         <th>User</th>
         {% endif %}
         <th>Action</th>
+        <th>Image</th>
 
 
     </tr>
@@ -49,7 +50,7 @@ My Entries
         <td>{{ entry.date }}</td>
         <td>{{ entry.distance }}</td>
         <td>{{ entry.time }}</td>
-        <td class="text-success">{{ entry.distance|div:entry.time }} m/s</td>
+        <td class="text-success">{{ entry.distance|div:entry.time|floatformat:2 }} m/s</td>
         {% if user.is_staff %}
         <td>{{ entry.user }}</td>
         {% endif %}
@@ -57,8 +58,7 @@ My Entries
             <a class="btn btn-success" href="{% url 'update-entry' entry.id %}"> <i class="fa fa-pencil"></i> </a>
             <a class="btn btn-danger" href="{% url 'delete-entry' entry.id %}"> <i class="fa fa-trash"></i> </i> </a>
         </td>
-
-
+<td> <img class="rounded" src = "{{ entry.image.url }}" width="50px" height="50px"> </td>
     </tr>
     {% endfor %}
     </tbody>
